backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABS
    CAPACITY
    CLONE
    CONTAINS
    IN
    LEN
    MATCH
    RAIZ
    RETURN
    TOSTRING

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> inst_imprimir PTCOMA
Rule 5     instruccion -> inst_declaracion PTCOMA
Rule 6     instruccion -> inst_asignacion PTCOMA
Rule 7     instruccion -> inst_if
Rule 8     instruccion -> inst_while
Rule 9     instruccion -> inst_break PTCOMA
Rule 10    instruccion -> inst_continue PTCOMA
Rule 11    instruccion -> inst_loop
Rule 12    instruccion -> inst_funcion
Rule 13    instruccion -> inst_struct
Rule 14    instruccion -> inst_mod
Rule 15    instruccion -> inst_declaracion_arreglo PTCOMA
Rule 16    instruccion -> inst_declaracion_vector PTCOMA
Rule 17    instruccion -> inst_modificar_arreglo PTCOMA
Rule 18    instruccion -> inst_vector_op PTCOMA
Rule 19    instruccion -> expresion
Rule 20    inst_imprimir -> PRINT NOT PARENTESISIZQ expresion PARENTESISDER
Rule 21    inst_imprimir -> PRINT NOT PARENTESISIZQ expresion COMA lista_expresiones PARENTESISDER
Rule 22    lista_expresiones -> lista_expresiones COMA expresion
Rule 23    lista_expresiones -> expresion
Rule 24    inst_declaracion -> LET MUTABLE ID DOSPUNTOS tipo_dato ASIGNACION expresion
Rule 25    inst_declaracion -> LET MUTABLE ID ASIGNACION expresion
Rule 26    inst_declaracion -> LET ID DOSPUNTOS tipo_dato ASIGNACION expresion
Rule 27    inst_declaracion -> LET ID ASIGNACION expresion
Rule 28    inst_declaracion_arreglo -> LET ID DOSPUNTOS tamanio_tipo ASIGNACION express
Rule 29    inst_declaracion_arreglo -> LET MUTABLE ID DOSPUNTOS tamanio_tipo ASIGNACION express
Rule 30    inst_declaracion_arreglo -> LET ID ASIGNACION express
Rule 31    inst_declaracion_arreglo -> LET MUTABLE ID ASIGNACION express
Rule 32    tamanio_tipo -> CORCHETEIZQ tamanio_tipo PTCOMA ENTERO CORCHETEDER
Rule 33    tamanio_tipo -> CORCHETEIZQ tipo_dato PTCOMA ENTERO CORCHETEDER
Rule 34    express -> express COMA express
Rule 35    express -> CORCHETEIZQ express CORCHETEDER
Rule 36    express -> CORCHETEIZQ lista_expresiones CORCHETEDER
Rule 37    express -> CORCHETEIZQ expresion PTCOMA ENTERO CORCHETEDER
Rule 38    inst_asignacion -> ID ASIGNACION expresion
Rule 39    inst_declaracion_vector -> LET ID ASIGNACION VECTOR NOT formav
Rule 40    inst_declaracion_vector -> LET MUTABLE ID ASIGNACION VECTOR NOT formav
Rule 41    inst_declaracion_vector -> LET ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS NEW PARENTESISIZQ PARENTESISDER
Rule 42    inst_declaracion_vector -> LET MUTABLE ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS NEW PARENTESISIZQ PARENTESISDER
Rule 43    inst_declaracion_vector -> LET ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS WCAPACITY PARENTESISIZQ ENTERO PARENTESISDER
Rule 44    inst_declaracion_vector -> LET MUTABLE ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS WCAPACITY PARENTESISIZQ ENTERO PARENTESISDER
Rule 45    formav -> CORCHETEIZQ lista_expresiones CORCHETEDER
Rule 46    formav -> CORCHETEIZQ expresion PTCOMA ENTERO CORCHETEDER
Rule 47    inst_modificar_arreglo -> acceso_vector ASIGNACION expresion
Rule 48    acceso_vector -> ID lista_acceso
Rule 49    lista_acceso -> lista_acceso CORCHETEIZQ ENTERO CORCHETEDER
Rule 50    lista_acceso -> CORCHETEIZQ ENTERO CORCHETEDER
Rule 51    inst_if -> IF expresion LLAVEIZQ instrucciones LLAVEDER
Rule 52    inst_if -> IF expresion LLAVEIZQ instrucciones LLAVEDER ELSE else
Rule 53    else -> inst_if
Rule 54    else -> LLAVEIZQ instrucciones LLAVEDER
Rule 55    inst_while -> WHILE expresion LLAVEIZQ instrucciones LLAVEDER
Rule 56    inst_break -> BREAK expresion
Rule 57    inst_break -> BREAK
Rule 58    inst_continue -> CONTINUE
Rule 59    inst_loop -> LOOP LLAVEIZQ instrucciones LLAVEDER
Rule 60    inst_vector_op -> ID PUNTO INSERT PARENTESISIZQ ENTERO COMA expresion PARENTESISDER
Rule 61    inst_vector_op -> ID PUNTO PUSH PARENTESISIZQ expresion PARENTESISDER
Rule 62    inst_vector_op -> ID PUNTO REMOVE PARENTESISIZQ ENTERO PARENTESISDER
Rule 63    inst_funcion -> FUNCION ID PARENTESISIZQ lista_parametros PARENTESISDER LLAVEIZQ instrucciones LLAVEDER
Rule 64    inst_funcion -> FUNCION ID PARENTESISIZQ lista_parametros PARENTESISDER MENOS MAYORQUE tipo_dato LLAVEIZQ instrucciones LLAVEDER
Rule 65    inst_funcion -> FUNCION ID PARENTESISIZQ PARENTESISDER LLAVEIZQ instrucciones LLAVEDER
Rule 66    inst_funcion -> FUNCION ID PARENTESISIZQ PARENTESISDER MENOS MAYORQUE tipo_dato LLAVEIZQ instrucciones LLAVEDER
Rule 67    inst_struct -> STRUCT ID LLAVEIZQ campos LLAVEDER
Rule 68    inst_mod -> MOD ID LLAVEIZQ instrucciones LLAVEDER
Rule 69    campos -> campos COMA campo
Rule 70    campos -> campo
Rule 71    campo -> ID DOSPUNTOS tipo_dato
Rule 72    campo -> ID
Rule 73    lista_parametros -> lista_parametros COMA parametro
Rule 74    lista_parametros -> parametro
Rule 75    parametro -> ID DOSPUNTOS tipo_dato
Rule 76    tipo_dato -> INT
Rule 77    tipo_dato -> FLOAT
Rule 78    tipo_dato -> CHAR
Rule 79    tipo_dato -> STRING
Rule 80    tipo_dato -> BOOL
Rule 81    tipo_dato -> STR
Rule 82    expresion -> PARENTESISIZQ expresion PARENTESISDER
Rule 83    expresion -> expresion MAS expresion
Rule 84    expresion -> expresion MENOS expresion
Rule 85    expresion -> expresion POR expresion
Rule 86    expresion -> expresion DIVIDIDO expresion
Rule 87    expresion -> expresion MODULO expresion
Rule 88    expresion -> expresion IGUAL expresion
Rule 89    expresion -> expresion DIFERENTE expresion
Rule 90    expresion -> expresion MAYORQUE expresion
Rule 91    expresion -> expresion MENORQUE expresion
Rule 92    expresion -> expresion MAYORIGUAL expresion
Rule 93    expresion -> expresion MENORIGUAL expresion
Rule 94    expresion -> expresion AND expresion
Rule 95    expresion -> expresion OR expresion
Rule 96    expresion -> inst_loop
Rule 97    expresion -> inst_if
Rule 98    expresion -> NOT expresion
Rule 99    expresion -> MENOS expresion
Rule 100   expresion -> tipo_dato POTENCIA PARENTESISIZQ expresion COMA expresion PARENTESISDER
Rule 101   expresion -> ENTERO
Rule 102   expresion -> DECIMAL
Rule 103   expresion -> TRUE
Rule 104   expresion -> FALSE
Rule 105   expresion -> CARACTER
Rule 106   expresion -> CADENA
Rule 107   expresion -> ID
Rule 108   expresion -> acceso_vector

Terminals, with rules where they appear

ABS                  : 
AND                  : 94
ASIGNACION           : 24 25 26 27 28 29 30 31 38 39 40 41 42 43 44 47
BOOL                 : 80
BREAK                : 56 57
CADENA               : 106
CAPACITY             : 
CARACTER             : 105
CHAR                 : 78
CLONE                : 
COMA                 : 21 22 34 60 69 73 100
CONTAINS             : 
CONTINUE             : 58
CORCHETEDER          : 32 33 35 36 37 45 46 49 50
CORCHETEIZQ          : 32 33 35 36 37 45 46 49 50
DECIMAL              : 102
DIFERENTE            : 89
DIVIDIDO             : 86
DOSPUNTOS            : 24 26 28 29 41 41 41 42 42 42 43 43 43 44 44 44 71 75
ELSE                 : 52
ENTERO               : 32 33 37 43 44 46 49 50 60 62 101
FALSE                : 104
FLOAT                : 77
FUNCION              : 63 64 65 66
ID                   : 24 25 26 27 28 29 30 31 38 39 40 41 42 43 44 48 60 61 62 63 64 65 66 67 68 71 72 75 107
IF                   : 51 52
IGUAL                : 88
IN                   : 
INSERT               : 60
INT                  : 76
LEN                  : 
LET                  : 24 25 26 27 28 29 30 31 39 40 41 42 43 44
LLAVEDER             : 51 52 54 55 59 63 64 65 66 67 68
LLAVEIZQ             : 51 52 54 55 59 63 64 65 66 67 68
LOOP                 : 59
MAS                  : 83
MATCH                : 
MAYORIGUAL           : 92
MAYORQUE             : 41 42 43 44 64 66 90
MENORIGUAL           : 93
MENORQUE             : 41 42 43 44 91
MENOS                : 64 66 84 99
MOD                  : 68
MODULO               : 87
MUTABLE              : 24 25 29 31 40 42 44
NEW                  : 41 42
NOT                  : 20 21 39 40 98
OR                   : 95
PARENTESISDER        : 20 21 41 42 43 44 60 61 62 63 64 65 66 82 100
PARENTESISIZQ        : 20 21 41 42 43 44 60 61 62 63 64 65 66 82 100
POR                  : 85
POTENCIA             : 100
PRINT                : 20 21
PTCOMA               : 4 5 6 9 10 15 16 17 18 32 33 37 46
PUNTO                : 60 61 62
PUSH                 : 61
RAIZ                 : 
REMOVE               : 62
RETURN               : 
STR                  : 81
STRING               : 79
STRUCT               : 67
TOSTRING             : 
TRUE                 : 103
VEC                  : 41 41 42 42 43 43 44 44
VECTOR               : 39 40
WCAPACITY            : 43 44
WHILE                : 55
error                : 

Nonterminals, with rules where they appear

acceso_vector        : 47 108
campo                : 69 70
campos               : 67 69
else                 : 52
expresion            : 19 20 21 22 23 24 25 26 27 37 38 46 47 51 52 55 56 60 61 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 98 99 100 100
express              : 28 29 30 31 34 34 35
formav               : 39 40
inicio               : 0
inst_asignacion      : 6
inst_break           : 9
inst_continue        : 10
inst_declaracion     : 5
inst_declaracion_arreglo : 15
inst_declaracion_vector : 16
inst_funcion         : 12
inst_if              : 7 53 97
inst_imprimir        : 4
inst_loop            : 11 96
inst_mod             : 14
inst_modificar_arreglo : 17
inst_struct          : 13
inst_vector_op       : 18
inst_while           : 8
instruccion          : 2 3
instrucciones        : 1 2 51 52 54 55 59 63 64 65 66 68
lista_acceso         : 48 49
lista_expresiones    : 21 22 36 45
lista_parametros     : 63 64 73
parametro            : 73 74
tamanio_tipo         : 28 29 32
tipo_dato            : 24 26 33 41 42 43 44 64 66 71 75 100

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . inst_imprimir PTCOMA
    (5) instruccion -> . inst_declaracion PTCOMA
    (6) instruccion -> . inst_asignacion PTCOMA
    (7) instruccion -> . inst_if
    (8) instruccion -> . inst_while
    (9) instruccion -> . inst_break PTCOMA
    (10) instruccion -> . inst_continue PTCOMA
    (11) instruccion -> . inst_loop
    (12) instruccion -> . inst_funcion
    (13) instruccion -> . inst_struct
    (14) instruccion -> . inst_mod
    (15) instruccion -> . inst_declaracion_arreglo PTCOMA
    (16) instruccion -> . inst_declaracion_vector PTCOMA
    (17) instruccion -> . inst_modificar_arreglo PTCOMA
    (18) instruccion -> . inst_vector_op PTCOMA
    (19) instruccion -> . expresion
    (20) inst_imprimir -> . PRINT NOT PARENTESISIZQ expresion PARENTESISDER
    (21) inst_imprimir -> . PRINT NOT PARENTESISIZQ expresion COMA lista_expresiones PARENTESISDER
    (24) inst_declaracion -> . LET MUTABLE ID DOSPUNTOS tipo_dato ASIGNACION expresion
    (25) inst_declaracion -> . LET MUTABLE ID ASIGNACION expresion
    (26) inst_declaracion -> . LET ID DOSPUNTOS tipo_dato ASIGNACION expresion
    (27) inst_declaracion -> . LET ID ASIGNACION expresion
    (38) inst_asignacion -> . ID ASIGNACION expresion
    (51) inst_if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER
    (52) inst_if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER ELSE else
    (55) inst_while -> . WHILE expresion LLAVEIZQ instrucciones LLAVEDER
    (56) inst_break -> . BREAK expresion
    (57) inst_break -> . BREAK
    (58) inst_continue -> . CONTINUE
    (59) inst_loop -> . LOOP LLAVEIZQ instrucciones LLAVEDER
    (63) inst_funcion -> . FUNCION ID PARENTESISIZQ lista_parametros PARENTESISDER LLAVEIZQ instrucciones LLAVEDER
    (64) inst_funcion -> . FUNCION ID PARENTESISIZQ lista_parametros PARENTESISDER MENOS MAYORQUE tipo_dato LLAVEIZQ instrucciones LLAVEDER
    (65) inst_funcion -> . FUNCION ID PARENTESISIZQ PARENTESISDER LLAVEIZQ instrucciones LLAVEDER
    (66) inst_funcion -> . FUNCION ID PARENTESISIZQ PARENTESISDER MENOS MAYORQUE tipo_dato LLAVEIZQ instrucciones LLAVEDER
    (67) inst_struct -> . STRUCT ID LLAVEIZQ campos LLAVEDER
    (68) inst_mod -> . MOD ID LLAVEIZQ instrucciones LLAVEDER
    (28) inst_declaracion_arreglo -> . LET ID DOSPUNTOS tamanio_tipo ASIGNACION express
    (29) inst_declaracion_arreglo -> . LET MUTABLE ID DOSPUNTOS tamanio_tipo ASIGNACION express
    (30) inst_declaracion_arreglo -> . LET ID ASIGNACION express
    (31) inst_declaracion_arreglo -> . LET MUTABLE ID ASIGNACION express
    (39) inst_declaracion_vector -> . LET ID ASIGNACION VECTOR NOT formav
    (40) inst_declaracion_vector -> . LET MUTABLE ID ASIGNACION VECTOR NOT formav
    (41) inst_declaracion_vector -> . LET ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS NEW PARENTESISIZQ PARENTESISDER
    (42) inst_declaracion_vector -> . LET MUTABLE ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS NEW PARENTESISIZQ PARENTESISDER
    (43) inst_declaracion_vector -> . LET ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS WCAPACITY PARENTESISIZQ ENTERO PARENTESISDER
    (44) inst_declaracion_vector -> . LET MUTABLE ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS WCAPACITY PARENTESISIZQ ENTERO PARENTESISDER
    (47) inst_modificar_arreglo -> . acceso_vector ASIGNACION expresion
    (60) inst_vector_op -> . ID PUNTO INSERT PARENTESISIZQ ENTERO COMA expresion PARENTESISDER
    (61) inst_vector_op -> . ID PUNTO PUSH PARENTESISIZQ expresion PARENTESISDER
    (62) inst_vector_op -> . ID PUNTO REMOVE PARENTESISIZQ ENTERO PARENTESISDER
    (82) expresion -> . PARENTESISIZQ expresion PARENTESISDER
    (83) expresion -> . expresion MAS expresion
    (84) expresion -> . expresion MENOS expresion
    (85) expresion -> . expresion POR expresion
    (86) expresion -> . expresion DIVIDIDO expresion
    (87) expresion -> . expresion MODULO expresion
    (88) expresion -> . expresion IGUAL expresion
    (89) expresion -> . expresion DIFERENTE expresion
    (90) expresion -> . expresion MAYORQUE expresion
    (91) expresion -> . expresion MENORQUE expresion
    (92) expresion -> . expresion MAYORIGUAL expresion
    (93) expresion -> . expresion MENORIGUAL expresion
    (94) expresion -> . expresion AND expresion
    (95) expresion -> . expresion OR expresion
    (96) expresion -> . inst_loop
    (97) expresion -> . inst_if
    (98) expresion -> . NOT expresion
    (99) expresion -> . MENOS expresion
    (100) expresion -> . tipo_dato POTENCIA PARENTESISIZQ expresion COMA expresion PARENTESISDER
    (101) expresion -> . ENTERO
    (102) expresion -> . DECIMAL
    (103) expresion -> . TRUE
    (104) expresion -> . FALSE
    (105) expresion -> . CARACTER
    (106) expresion -> . CADENA
    (107) expresion -> . ID
    (108) expresion -> . acceso_vector
    (48) acceso_vector -> . ID lista_acceso
    (76) tipo_dato -> . INT
    (77) tipo_dato -> . FLOAT
    (78) tipo_dato -> . CHAR
    (79) tipo_dato -> . STRING
    (80) tipo_dato -> . BOOL
    (81) tipo_dato -> . STR

    PRINT           shift and go to state 20
    LET             shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    BREAK           shift and go to state 28
    CONTINUE        shift and go to state 29
    LOOP            shift and go to state 30
    FUNCION         shift and go to state 31
    STRUCT          shift and go to state 33
    MOD             shift and go to state 34
    PARENTESISIZQ   shift and go to state 22
    NOT             shift and go to state 21
    MENOS           shift and go to state 32
    ENTERO          shift and go to state 35
    DECIMAL         shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    CARACTER        shift and go to state 40
    CADENA          shift and go to state 41
    INT             shift and go to state 42
    FLOAT           shift and go to state 43
    CHAR            shift and go to state 44
    STRING          shift and go to state 45
    BOOL            shift and go to state 46
    STR             shift and go to state 47

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    inst_imprimir                  shift and go to state 4
    inst_declaracion               shift and go to state 5
    inst_asignacion                shift and go to state 6
    inst_if                        shift and go to state 7
    inst_while                     shift and go to state 8
    inst_break                     shift and go to state 9
    inst_continue                  shift and go to state 10
    inst_loop                      shift and go to state 11
    inst_funcion                   shift and go to state 12
    inst_struct                    shift and go to state 13
    inst_mod                       shift and go to state 14
    inst_declaracion_arreglo       shift and go to state 15
    inst_declaracion_vector        shift and go to state 16
    inst_modificar_arreglo         shift and go to state 17
    inst_vector_op                 shift and go to state 18
    expresion                      shift and go to state 19
    tipo_dato                      shift and go to state 25
    acceso_vector                  shift and go to state 36

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . inst_imprimir PTCOMA
    (5) instruccion -> . inst_declaracion PTCOMA
    (6) instruccion -> . inst_asignacion PTCOMA
    (7) instruccion -> . inst_if
    (8) instruccion -> . inst_while
    (9) instruccion -> . inst_break PTCOMA
    (10) instruccion -> . inst_continue PTCOMA
    (11) instruccion -> . inst_loop
    (12) instruccion -> . inst_funcion
    (13) instruccion -> . inst_struct
    (14) instruccion -> . inst_mod
    (15) instruccion -> . inst_declaracion_arreglo PTCOMA
    (16) instruccion -> . inst_declaracion_vector PTCOMA
    (17) instruccion -> . inst_modificar_arreglo PTCOMA
    (18) instruccion -> . inst_vector_op PTCOMA
    (19) instruccion -> . expresion
    (20) inst_imprimir -> . PRINT NOT PARENTESISIZQ expresion PARENTESISDER
    (21) inst_imprimir -> . PRINT NOT PARENTESISIZQ expresion COMA lista_expresiones PARENTESISDER
    (24) inst_declaracion -> . LET MUTABLE ID DOSPUNTOS tipo_dato ASIGNACION expresion
    (25) inst_declaracion -> . LET MUTABLE ID ASIGNACION expresion
    (26) inst_declaracion -> . LET ID DOSPUNTOS tipo_dato ASIGNACION expresion
    (27) inst_declaracion -> . LET ID ASIGNACION expresion
    (38) inst_asignacion -> . ID ASIGNACION expresion
    (51) inst_if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER
    (52) inst_if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER ELSE else
    (55) inst_while -> . WHILE expresion LLAVEIZQ instrucciones LLAVEDER
    (56) inst_break -> . BREAK expresion
    (57) inst_break -> . BREAK
    (58) inst_continue -> . CONTINUE
    (59) inst_loop -> . LOOP LLAVEIZQ instrucciones LLAVEDER
    (63) inst_funcion -> . FUNCION ID PARENTESISIZQ lista_parametros PARENTESISDER LLAVEIZQ instrucciones LLAVEDER
    (64) inst_funcion -> . FUNCION ID PARENTESISIZQ lista_parametros PARENTESISDER MENOS MAYORQUE tipo_dato LLAVEIZQ instrucciones LLAVEDER
    (65) inst_funcion -> . FUNCION ID PARENTESISIZQ PARENTESISDER LLAVEIZQ instrucciones LLAVEDER
    (66) inst_funcion -> . FUNCION ID PARENTESISIZQ PARENTESISDER MENOS MAYORQUE tipo_dato LLAVEIZQ instrucciones LLAVEDER
    (67) inst_struct -> . STRUCT ID LLAVEIZQ campos LLAVEDER
    (68) inst_mod -> . MOD ID LLAVEIZQ instrucciones LLAVEDER
    (28) inst_declaracion_arreglo -> . LET ID DOSPUNTOS tamanio_tipo ASIGNACION express
    (29) inst_declaracion_arreglo -> . LET MUTABLE ID DOSPUNTOS tamanio_tipo ASIGNACION express
    (30) inst_declaracion_arreglo -> . LET ID ASIGNACION express
    (31) inst_declaracion_arreglo -> . LET MUTABLE ID ASIGNACION express
    (39) inst_declaracion_vector -> . LET ID ASIGNACION VECTOR NOT formav
    (40) inst_declaracion_vector -> . LET MUTABLE ID ASIGNACION VECTOR NOT formav
    (41) inst_declaracion_vector -> . LET ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS NEW PARENTESISIZQ PARENTESISDER
    (42) inst_declaracion_vector -> . LET MUTABLE ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS NEW PARENTESISIZQ PARENTESISDER
    (43) inst_declaracion_vector -> . LET ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS WCAPACITY PARENTESISIZQ ENTERO PARENTESISDER
    (44) inst_declaracion_vector -> . LET MUTABLE ID DOSPUNTOS VEC MENORQUE tipo_dato MAYORQUE ASIGNACION VEC DOSPUNTOS DOSPUNTOS WCAPACITY PARENTESISIZQ ENTERO PARENTESISDER
    (47) inst_modificar_arreglo -> . acceso_vector ASIGNACION expresion
    (60) inst_vector_op -> . ID PUNTO INSERT PARENTESISIZQ ENTERO COMA expresion PARENTESISDER
    (61) inst_vector_op -> . ID PUNTO PUSH PARENTESISIZQ expresion PARENTESISDER
    (62) inst_vector_op -> . ID PUNTO REMOVE PARENTESISIZQ ENTERO PARENTESISDER
    (82) expresion -> . PARENTESISIZQ expresion PARENTESISDER
    (83) expresion -> . expresion MAS expresion
    (84) expresion -> . expresion MENOS expresion
    (85) expresion -> . expresion POR expresion
    (86) expresion -> . expresion DIVIDIDO expresion
    (87) expresion -> . expresion MODULO expresion
    (88) expresion -> . expresion IGUAL expresion
    (89) expresion -> . expresion DIFERENTE expresion
    (90) expresion -> . expresion MAYORQUE expresion
    (91) expresion -> . expresion MENORQUE expresion
    (92) expresion -> . expresion MAYORIGUAL expresion
    (93) expresion -> . expresion MENORIGUAL expresion
    (94) expresion -> . expresion AND expresion
    (95) expresion -> . expresion OR expresion
    (96) expresion -> . inst_loop
    (97) expresion -> . inst_if
    (98) expresion -> . NOT expresion
    (99) expresion -> . MENOS expresion
    (100) expresion -> . tipo_dato POTENCIA PARENTESISIZQ expresion COMA expresion PARENTESISDER
    (101) expresion -> . ENTERO
    (102) expresion -> . DECIMAL
    (103) expresion -> . TRUE
    (104) expresion -> . FALSE
    (105) expresion -> . CARACTER
    (106) expresion -> . CADENA
    (107) expresion -> . ID
    (108) expresion -> . acceso_vector
    (48) acceso_vector -> . ID lista_acceso
    (76) tipo_dato -> . INT
    (77) tipo_dato -> . FLOAT
    (78) tipo_dato -> . CHAR
    (79) tipo_dato -> . STRING
    (80) tipo_dato -> . BOOL
    (81) tipo_dato -> . STR

    $end            reduce using rule 1 (inicio -> instrucciones .)
    PRINT           shift and go to state 20
    LET             shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    BREAK           shift and go to state 28
    CONTINUE        shift and go to state 29
    LOOP            shift and go to state 30
    FUNCION         shift and go to state 31
    STRUCT          shift and go to state 33
    MOD             shift and go to state 34
    PARENTESISIZQ   shift and go to state 22
    NOT             shift and go to state 21
    MENOS           shift and go to state 32
    ENTERO          shift and go to state 35
    DECIMAL         shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    CARACTER        shift and go to state 40
    CADENA          shift and go to state 41
    INT             shift and go to state 42
    FLOAT           shift and go to state 43
    CHAR            shift and go to state 44
    STRING          shift and go to state 45
    BOOL            shift and go to state 46
    STR             shift and go to state 47

    instruccion                    shift and go to state 48
    inst_imprimir                  shift and go to state 4
    inst_declaracion               shift and go to state 5
    inst_asignacion                shift and go to state 6
    inst_if                        shift and go to state 7
    inst_while                     shift and go to state 8
    inst_break                     shift and go to state 9
    inst_continue                  shift and go to state 10
    inst_loop                      shift and go to state 11
    inst_funcion                   shift and go to state 12
    inst_struct                    shift and go to state 13
    inst_mod                       shift and go to state 14
    inst_declaracion_arreglo       shift and go to state 15
    inst_declaracion_vector        shift and go to state 16
    inst_modificar_arreglo         shift and go to state 17
    inst_vector_op                 shift and go to state 18
    expresion                      shift and go to state 19
    tipo_dato                      shift and go to state 25
    acceso_vector                  shift and go to state 36

state 3

    (3) instrucciones -> instruccion .

    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    LOOP            reduce using rule 3 (instrucciones -> instruccion .)
    FUNCION         reduce using rule 3 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 3 (instrucciones -> instruccion .)
    MOD             reduce using rule 3 (instrucciones -> instruccion .)
    PARENTESISIZQ   reduce using rule 3 (instrucciones -> instruccion .)
    NOT             reduce using rule 3 (instrucciones -> instruccion .)
    MENOS           reduce using rule 3 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 3 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 3 (instrucciones -> instruccion .)
    TRUE            reduce using rule 3 (instrucciones -> instruccion .)
    FALSE           reduce using rule 3 (instrucciones -> instruccion .)
    CARACTER        reduce using rule 3 (instrucciones -> instruccion .)
    CADENA          reduce using rule 3 (instrucciones -> instruccion .)
    INT             reduce using rule 3 (instrucciones -> instruccion .)
    FLOAT           reduce using rule 3 (instrucciones -> instruccion .)
    CHAR            reduce using rule 3 (instrucciones -> instruccion .)
    STRING          reduce using rule 3 (instrucciones -> instruccion .)
    BOOL            reduce using rule 3 (instrucciones -> instruccion .)
    STR             reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> inst_imprimir . PTCOMA

    PTCOMA          shift and go to state 49


state 5

    (5) instruccion -> inst_declaracion . PTCOMA

    PTCOMA          shift and go to state 50


state 6

    (6) instruccion -> inst_asignacion . PTCOMA

    PTCOMA          shift and go to state 51


state 7

    (7) instruccion -> inst_if .
    (97) expresion -> inst_if .
